force-app/main/default/objects/AWSCognitoConsumerLink__mdt/AWSCognitoConsumerLink__mdt.object-meta.xml
<CustomObject>
    <label>AWSCognitoConsumerLink</label>
    <pluralLabel>AWSCognitoConsumerLink</pluralLabel>
</CustomObject>