force-app/main/default/objects/AWSCognitoConsumerLink__mdt/fields/accessTokenUrl__c.field-meta.xml
<CustomField>
    <fullName>accessTokenUrl__c</fullName>
    <label>accessTokenUrl</label>
    <type>Url</type>
</CustomField>