force-app/main/default/objects/AWSCognitoConsumerLink__mdt/fields/authUrl__c.field-meta.xml
<CustomField>
    <fullName>authUrl__c</fullName>
    <label>authUrl</label>
    <type>Url</type>
</CustomField>