force-app/main/default/objects/AWSCognitoConsumerLink__mdt/fields/CognitoLoginURL__c.field-meta.xml
<CustomField>
    <fullName>CognitoLoginURL__c</fullName>
    <label>CognitoLoginURL</label>
    <type>Url</type>
</CustomField>