force-app/main/default/objects/AWSCognitoConsumerLink__mdt/fields/redirectUrl__c.field-meta.xml
<CustomField>
    <fullName>redirectUrl__c</fullName>
    <label>redirectUrl</label>
    <type>Url</type>
</CustomField>