force-app/main/default/objects/AWSCognitoConsumerLink__mdt/fields/ResponseType__c.field-meta.xml
<CustomField>
    <fullName>ResponseType__c</fullName>
    <label>Responsetype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>