force-app/main/default/objects/AWSCognitoConsumerLink__mdt/fields/userAPIUrl__c.field-meta.xml
<CustomField>
    <fullName>userAPIUrl__c</fullName>
    <label>userAPIUrl</label>
    <type>Url</type>
</CustomField>