force-app/main/default/objects/AWSCognitoConsumerLink__mdt/fields/userAPIVersionUrl__c.field-meta.xml
<CustomField>
    <fullName>userAPIVersionUrl__c</fullName>
    <label>userAPIVersionUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>